Fix the spacing, and spelling mistakes

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ header {
 h1 {
   text-align: center;
   margin: 0;
-  padding: 0;
   font-family: "Sigmar One", regualr;
   color: #b20953;
   font-size: 3rem;
@@ -36,13 +35,13 @@ body main {
   text-align: center;
 }
 
-h2 {
+main h2 {
   font-family: "Sigmar One", regualr;
   font-size: 1.875rem;
   color: #b20953;
   text-align: left;
   margin: 0;
-  padding: .75em;
+  padding: .75em 0 0;
 }
 
 main p {
@@ -95,4 +94,5 @@ img {
   width: 100%;
   display: block;
   margin: 0;
+  padding: 2em 0 0;
 }
